Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-109535

infinite loop in ffmpeg camera check

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.4.3, 6.5.0, 6.6.0
    • 6.5
    • Multimedia
    • None
    • Linux/Yocto
    • 8897d36de (dev), 8a8d44d28 (6.5), e98cfba8b (6.4)

    Description

      using ffmpeg backend in raspberrypi4 enters into infinite loop in QV4L2CameraDevices::doCheckCameras().

      This happens if VIDIOC_ENUM_FRAMESIZES returns anything else than V4L2_FRMSIZE_TYPE_DISCRETE and the while loop is continued infinitely.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            artemiy Artem Dyomin
            sapiippo Samuli Piippo
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes