ffmpeg: avoid infinite loop with non-discreate framesizes

The v4l2 camera checkup can properly handly only discrete types.
In case ioctl reports anything else, make sure we increase the index
to avoid getting stuck on infinite loop.

Fixes: QTBUG-109535
Change-Id: I7e669b8167361875b75d4eece5c0c9a92a76c331
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
Reviewed-by: Lars Knoll <lars@knoll.priv.no>
(cherry picked from commit 8897d36de57db3ce9d75fbd87bcec96bbbd4d69f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>